# mathlaw

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mathlaw.cpp  mathlaw.h
.github/workflows/: linux-cmake-build.yml  linux-simple-builds.yml
docs/: .gitignore
number/: .gitignore
src/: CMakeLists.txt  mathlaw.cpp  mathlaw.h
tests/: CMakeLists.txt
tests/algebra/: CMakeLists.txt
tests/calculus/: CMakeLists.txt
tests/discrete/: CMakeLists.txt
tests/geometry/: CMakeLists.txt
tests/number/: CMakeLists.txt  test_prime_numbers.cpp
tests/statistics/: CMakeLists.txt
